# seha-backend

./: .gitignore  docker-compose.yml  fill_db.py  front.py  index.html  main.py  nginx.conf  pyproject.toml  seha_accounts_20251223_015611.csv  seha_accounts_20251223_030454.csv  seha_backend_api_doc.html  test_seha_backend.py
app/: app.py
auth-service/: Dockerfile  crud.py  main.py  models.py  requirements.txt  schemas.py
chatbot-service/: .env.example  Dockerfile  chatbot_engine.py  crud.py  main.py  models.py  requirements.txt  schemas.py
medical-service/: Dockerfile  crud.py  main.py  models.py  requirements.txt  schemas.py
scheduling-service/: Dockerfile  crud.py  main.py  models.py  requirements.txt  schemas.py
shared/: auth.py  database.py  minio_client.py  requirements.txt
